fixed button size on small screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@ body{
     font-family: 'Work Sans', sans-serif;
 }
 
+
 h1 {
     text-align: center;
 }
@@ -28,7 +29,8 @@ ul {
     margin: 4px 2px;
     border-bottom: 2px solid rgba(0, 0, 0, 0.3);
     cursor: pointer;
-    width: 20%;
+    min-width: 200px;
+    max-width: 200px;
 }
 
 button:hover {
